cmake_minimum_required(VERSION 2.8)
project(boostFinal)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system")
set(SOURCE_FILES main.cpp)
FIND_PACKAGE(Boost 1.51 COMPONENTS system REQUIRED)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
add_executable(final ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(final ${BOOST_LIBRARIES})