cmake_minimum_required(VERSION 2.8)
project(boostFinal)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system")
set(SOURCE_FILES main.cpp)
set(BOOST_LIBRARYDIR )
FIND_PACKAGE(Boost 1.55 COMPONENTS system bind REQUIRED)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
add_executable(final ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(final system)