cmake_minimum_required(VERSION 2.8)
project(boostFinal)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -lboost_thread")
set(SOURCE_FILES main.cpp)
FIND_PACKAGE(Boost  COMPONENTS system  thread REQUIRED)
INCLUDE_DIRECTORIES(${BOOST_INCLUDE_DIR})
add_executable(final ${SOURCE_FILES})
TARGET_LINK_LIBRARIES(final boost_system boost_thread)
